assets/css/style.css
:root,
[data-bs-theme="light"] {
  /* tertiary background color */
  --bs-body-bg: #bfdbed;

  --bs-tertiary-bg-rgb: 200, 188, 199;
  /* --bs-tertiary-bg: #c8bcc7; */

  --bs-border-color: #4F93D7;
}

.body {
  height: 100vh;
}

.bg-image {
  background-image: url("../img/beach-pattern.svg");
}

.bg-hero-image {
  background-image: url("../img/ai-generated-beach.webp");
  background-position: center;
  background-size: cover;
}

.navbar {
  --bs-navbar-nav-link-padding-x: 0.7rem;
}

.my-btn {
  --bs-btn-color: #212529;
  --bs-btn-border-color: #4F93D7;
  --bs-btn-hover-color: #fff;
  --bs-btn-hover-bg: #4F93D7;
  --bs-btn-hover-border-color: #4F93D7;
  --bs-btn-focus-shadow-rgb: 25,135,84;
  --bs-btn-active-color: #fff;
  --bs-btn-active-bg: #198754;
  --bs-btn-active-border-color: #198754;
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: #198754;
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: #198754;
  --bs-gradient: none;
}

